[gd_scene load_steps=9 format=3 uid="uid://cbeu4b6kfbhq"]

[ext_resource type="StyleBox" uid="uid://ix27fttyj0a" path="res://themes/panel_stylebox.tres" id="1_rtw2f"]
[ext_resource type="Script" uid="uid://46iqoxfdd1r6" path="res://scripts/MainMenu.gd" id="2_oa1go"]
[ext_resource type="ButtonGroup" uid="uid://e8w6c7ckp8p2" path="res://assets/menu_button_group.tres" id="3_oa1go"]
[ext_resource type="Texture2D" uid="uid://brkm5lybjd2i8" path="res://assets/teknofire-transparent-320-180.png" id="3_tbmy8"]
[ext_resource type="Theme" uid="uid://cqsmkdhjpvasy" path="res://themes/setting_theme.tres" id="4_jk1qb"]
[ext_resource type="Script" uid="uid://dawqcxh3d2bgx" path="res://scripts/port.gd" id="5_5dd4i"]
[ext_resource type="Script" uid="uid://dcfouse87q44k" path="res://scripts/WebsocketAddress.gd" id="6_lgwnu"]

[sub_resource type="Theme" id="Theme_akjw7"]
Label/constants/outline_size = 0
Panel/styles/panel = ExtResource("1_rtw2f")

[node name="MainMenu" type="PanelContainer"]
z_index = 5
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_akjw7")
theme_override_styles/panel = ExtResource("1_rtw2f")
script = ExtResource("2_oa1go")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 50
text = "Stream Questions"
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 150)
layout_mode = 2
size_flags_vertical = 2
theme_override_constants/separation = 10

[node name="Resume" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
toggle_mode = true
button_group = ExtResource("3_oa1go")
text = "Resume"

[node name="SettingsButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
toggle_mode = true
button_group = ExtResource("3_oa1go")
text = "Settings"

[node name="TimerButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
toggle_mode = true
button_group = ExtResource("3_oa1go")
text = "Timer"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
toggle_mode = true
button_group = ExtResource("3_oa1go")
text = "Quit"

[node name="ContentSection" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Settings" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection" groups=["SettingPanels"]]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="TabContainer" type="TabContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Settings"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("4_jk1qb")
theme_override_constants/outline_size = 0
theme_override_constants/side_margin = 0
current_tab = 0

[node name="API" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Settings/TabContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
metadata/_tab_index = 0

[node name="APIGrid" type="GridContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Settings/TabContainer/API"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 2

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Settings/TabContainer/API/APIGrid"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Enabled	"
horizontal_alignment = 2

[node name="api_enabled" type="CheckButton" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Settings/TabContainer/API/APIGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Settings/TabContainer/API/APIGrid"]
layout_mode = 2
text = "Api Url:"
horizontal_alignment = 2

[node name="api_url" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Settings/TabContainer/API/APIGrid"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "https://questions.teknofire.net"

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Settings/TabContainer/API/APIGrid"]
layout_mode = 2
text = "Api Key:	"
horizontal_alignment = 2

[node name="api_key" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Settings/TabContainer/API/APIGrid"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_horizontal = 3
secret = true

[node name="WebSocket" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Settings/TabContainer"]
visible = false
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
metadata/_tab_index = 1

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Settings/TabContainer/WebSocket"]
layout_mode = 2
columns = 2

[node name="PortLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Settings/TabContainer/WebSocket/GridContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Port"
horizontal_alignment = 2

[node name="port" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Settings/TabContainer/WebSocket/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "9000"
script = ExtResource("5_5dd4i")

[node name="UrlLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Settings/TabContainer/WebSocket/GridContainer"]
layout_mode = 2
text = "WebSocket Url"
horizontal_alignment = 2

[node name="web_socket_url" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Settings/TabContainer/WebSocket/GridContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
placeholder_text = "ws://localhost:[PORT]/"
editable = false
script = ExtResource("6_lgwnu")

[node name="Messages" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Settings/TabContainer"]
visible = false
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
metadata/_tab_index = 2

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Settings/TabContainer/Messages"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="WidthLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Settings/TabContainer/Messages/GridContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Width"
horizontal_alignment = 2

[node name="ui_question_width" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Settings/TabContainer/Messages/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="HeightLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Settings/TabContainer/Messages/GridContainer"]
layout_mode = 2
text = "Height"
horizontal_alignment = 2

[node name="ui_question_height" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Settings/TabContainer/Messages/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Settings/TabContainer/Messages/GridContainer"]
layout_mode = 2

[node name="ShowPanel" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Settings/TabContainer/Messages/GridContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Toggle Question Panel"

[node name="Cache" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Settings/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 150
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 150
theme_override_constants/margin_bottom = 50
metadata/_tab_index = 3

[node name="ClearCache" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Settings/TabContainer/Cache"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/outline_size = 0
text = "Clear Audio Cache"

[node name="Printer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Settings/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 4

[node name="PrinterGrid" type="GridContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Settings/TabContainer/Printer"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Settings/TabContainer/Printer/PrinterGrid"]
layout_mode = 2
text = "IP Address"
horizontal_alignment = 2

[node name="printer_ip" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Settings/TabContainer/Printer/PrinterGrid"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_horizontal = 3
text = "192.168.1.87"

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Settings/TabContainer/Printer/PrinterGrid"]
layout_mode = 2
text = "Port"
horizontal_alignment = 2

[node name="printer_port" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Settings/TabContainer/Printer/PrinterGrid"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = "9100"
placeholder_text = "9100"

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Settings/TabContainer/Printer/PrinterGrid"]
layout_mode = 2
text = "Receipt Header"
horizontal_alignment = 2

[node name="printer_header" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Settings/TabContainer/Printer/PrinterGrid"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 35)
layout_mode = 2

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Settings/TabContainer/Printer/PrinterGrid"]
layout_mode = 2
text = "Receipt Subheader"

[node name="printer_subheader" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Settings/TabContainer/Printer/PrinterGrid"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 35)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Settings"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="Cancel" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Settings/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30
text = "Cancel"

[node name="Save" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Settings/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30
text = "Save"

[node name="Timer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection" groups=["SettingPanels"]]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Timer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Timer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Timer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Timer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 10
columns = 2

[node name="Name" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Timer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Name"
horizontal_alignment = 2

[node name="TimerTitle" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Timer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
text = "Default Timer"

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Timer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Duration"
horizontal_alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Timer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2

[node name="Hours" type="SpinBox" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Timer/PanelContainer/MarginContainer/VBoxContainer/GridContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="H" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Timer/PanelContainer/MarginContainer/VBoxContainer/GridContainer/HBoxContainer"]
layout_mode = 2
text = "H"

[node name="Minutes" type="SpinBox" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Timer/PanelContainer/MarginContainer/VBoxContainer/GridContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="M" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Timer/PanelContainer/MarginContainer/VBoxContainer/GridContainer/HBoxContainer"]
layout_mode = 2
text = "M"

[node name="VolumeLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Timer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Volume"
horizontal_alignment = 2

[node name="VolumeSlider" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Timer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_vertical = 3
max_value = 24.0
rounded = true

[node name="Instructions" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Timer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "
Availble Websocket Commands

* timer.start   - Start the timer
* timer.stop    - Stop the timer
* timer.reset   - Reset the timer
* timer.toggle - Show/Hide timer,  the timer keeps running if it was started"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Timer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 20

[node name="Cancel" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Timer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30
text = "Cancel"

[node name="Save" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Timer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30
text = "Save"

[node name="Container" type="Control" parent="."]
custom_minimum_size = Vector2(120, 100)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="Container"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_tbmy8")
expand_mode = 5
stretch_mode = 5

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/TimerButton" to="." method="_on_timer_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="focus_exited" from="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Settings/TabContainer/WebSocket/GridContainer/port" to="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Settings/TabContainer/WebSocket/GridContainer/port" method="_on_focus_exited"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Settings/TabContainer/WebSocket/GridContainer/port" to="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Settings/TabContainer/WebSocket/GridContainer/web_socket_url" method="_on_port_text_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Settings/HBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Timer/PanelContainer/MarginContainer/VBoxContainer/GridContainer/HBoxContainer/Hours" to="." method="_on_hours_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Timer/PanelContainer/MarginContainer/VBoxContainer/GridContainer/HBoxContainer/Minutes" to="." method="_on_minutes_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Timer/PanelContainer/MarginContainer/VBoxContainer/GridContainer/VolumeSlider" to="." method="_on_volume_slider_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ContentSection/Timer/HBoxContainer/Save" to="." method="_on_save_pressed"]
